--- a/wedding/css/style.css
+++ b/wedding/css/style.css
@@ -301,6 +301,7 @@ h1, h2, h3, h4, h5, h6, figure {
   background-repeat: no-repeat;
   position: relative;
   width: 100%;
+	background-position-x: center !important;
 }
 .fh5co-cover .overlay {
   z-index: 0;
@@ -309,7 +310,7 @@ h1, h2, h3, h4, h5, h6, figure {
   top: 0;
   left: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(255, 255, 255, 0.10)
 }
 .fh5co-cover > .fh5co-container {
   position: relative;
@@ -999,7 +1000,7 @@ form label {
 #fh5co-couple,
 #fh5co-gallery,
 .fh5co-section {
-  padding: 7em 0;
+  padding: 4em 0;
   clear: both;
 }
 @media screen and (max-width: 768px) {
